--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,4 +10,7 @@
 @import "blocks/_buttons.scss";
 @import "blocks/_index.scss";
 @import "blocks/_form.scss";
+@import "blocks/_filter.scss";
+@import "blocks/_pagination.scss";
+@import "blocks/_modal.scss";
 @import "blocks/_page.scss";
