--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -1,6 +1,7 @@
 .btn {
     display: inline-block;
     vertical-align: middle;
+    height: 37px;
     padding: 9px 23px;
     color: #fff;
     background-color: $blue;
