--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -9,7 +9,7 @@ header {
 	justify-content: space-between;
 }
 .logo {
-	width: 11%;
+	width: 100px;
 }
 .logo-link {
 	font-family: $font-family-sub;
@@ -38,7 +38,7 @@ header {
 	font-weight: 700;
 }
 .search {
-	width: 32%;
+	width: 365px;
 }
 .search-form {
 	position: relative;
