--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,7 @@
 
 //blocks styles
 @import "blocks/_header.scss";
+@import "blocks/_header-lk.scss";
 @import "blocks/_menu.scss";
 @import "blocks/_footer.scss";
 @import "blocks/_buttons.scss";
@@ -13,4 +14,7 @@
 @import "blocks/_filter.scss";
 @import "blocks/_pagination.scss";
 @import "blocks/_modal.scss";
+@import "blocks/_sidebar.scss";
+@import "blocks/_table.scss";
 @import "blocks/_page.scss";
+@import "blocks/_page-lk.scss";
