--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -11,6 +11,7 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 19px;
+    border: none;
     &:hover,
     &:active,
     &:focus {
