--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,5 +16,6 @@
 @import "blocks/_modal.scss";
 @import "blocks/_sidebar.scss";
 @import "blocks/_table.scss";
+@import "blocks/_tabs.scss";
 @import "blocks/_page.scss";
 @import "blocks/_page-lk.scss";
