Разделение стилей и скриптов + страница ЛК Профиль

--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -17,4 +17,14 @@
     &:focus {
     	background-color: $dark-blue;
     }
+    &.btn--light-blue {
+        background-color: $blue;
+        &:hover,
+        &:active {
+            background-color: $dark-blue;
+        }
+    }
+    &.btn--small {
+        width: 133px;
+    }
 }
