--- a/src/sass/blocks/_form.scss
+++ b/src/sass/blocks/_form.scss
@@ -17,32 +17,6 @@
 		color: #616161;
 	}
 }
-.social {
-	text-align: center;
-}
-.social-list {
-	padding: 7px 0;
-	justify-content: center;
-}
-.social-item {
-	margin: 5px;
-}
-.social-link {
-	width: 30px;
-	height: 30px;
-	display: block;
-	font-size: 0;
-}
-.social-link--google {
-	background: url(../img/google.svg) 0 0 no-repeat;
-}
-.social-link--facebook {
-	background: url(../img/fb.svg) 0 0 no-repeat;
-}
-.social-link--vk {
-	background: url(../img/vk.svg) 0 0 no-repeat;
-}
-
 fieldset {
 	border: none;
 	margin: 0;
@@ -51,6 +25,16 @@ fieldset {
 	p {
 		text-align: center;
 		margin-bottom: 5px;
+	}
+}
+label {
+	font-weight: normal;
+	font-size: 10px;
+	line-height: normal;
+	display: block;
+	& + input,
+	& + .custom-select-wrapper {
+		margin-top: 3px;
 	}
 }
 input {
@@ -101,58 +85,4 @@ input[type="submit"] {
 .form-footer a {
 	font-size: 10px;
 	line-height: 14px;
-}
-
-.input-checkbox {
-    position: relative;
-    display: block;
-    padding-left: 20px;
-    font-size: 10px;
-	line-height: 14px;
-	color: #515151;
-	font-weight: 400;
-    input[type="checkbox"] {
-	    visibility: hidden;
-	    position: absolute;
-	    left: 0;
-	    top: 0;
-	    margin: 0;
-	    padding: 0;
-	    outline: none;
-	    cursor: pointer;
-	    opacity: 0;
-	}
-	span.checkbox {
-	    margin-top: 0;
-	    margin-bottom: 0;
-	    position: relative;
-	    display: block;
-	}
-	input[type="checkbox"] + .checkbox:before {
-		content: '';
-	    position: absolute;
-	    left: -20px;
-	    top: 0;
-	    width: 12px;
-	    height: 12px;
-	    background-color: #f5f4f4;
-	    border: 1px solid #27D4B4;
-	    z-index: 1;
-	    cursor: pointer;
-	    border-radius: 2px;
-	}
-	input[type="checkbox"]:checked + .checkbox:before {
-	    background-color: #27D4B4;
-	}
-	input[type="checkbox"]:checked + .checkbox:after {
-	    content: '';
-	    position: absolute;
-		z-index: 2;
-		top: 2px;
-		left: -18px;
-		width: 10px;
-		height: 10px;
-	    background: url(../img/checkbox.svg) 0 0 no-repeat;
-	    cursor: pointer;
-	}
 }
