--- a/src/sass/dev/_variables.scss
+++ b/src/sass/dev/_variables.scss
@@ -2,6 +2,8 @@ $font-color: 		#ABABAB;
 $title-color:       #3B3B3B;
 $blue: 				#26A7C5;
 $dark-blue:       	#25709A;
+$light-gray: 		#E8E8E8;
+$dark-gray: 		#515151;
 
 
 $font-family:		'Ubuntu', sans-serif;
