--- a/src/sass/blocks/_header-lk.scss
+++ b/src/sass/blocks/_header-lk.scss
@@ -1,3 +1,70 @@
+header {
+	height: 80px;
+	background-color: #F1F1F1;
+	box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.1);
+}
+.header-box {
+	align-items: center;
+	justify-content: space-between;
+}
+.logo {
+	width: 100px;
+}
+.logo-link {
+	font-family: $font-family-sub;
+	font-size: 24px;
+	color: $dark-blue;
+	span {
+		font-weight: 900;
+	}
+}
+.menu-item {
+	display: inline-block;
+	vertical-align: top;
+}
+.menu-link {
+	padding: 0 17px;
+	font-weight: 500;
+	font-size: 14px;
+	color: $title-color;
+}
+.menu-link--active,
+.menu-link:hover {
+	color: $blue;
+	font-weight: 700;
+}
+.search {
+	width: 365px;
+}
+.search-form {
+	position: relative;
+}
+.search-field {
+	width: 100%;
+	height: 40px;
+	background: #E8E8E8;
+	border-radius: 5px;
+	border: none;
+	padding: 5px 35px 5px 13px;
+	font-size: 14px;
+	color: #515151;
+	box-sizing: border-box;
+	outline: none;
+}
+.search-btn {
+	width: 32px;
+	height: 40px;
+	font-size: 0;
+	background: url(../img/search-icon.svg) center no-repeat;
+	border: none;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	right: 5px;
+	outline: none;
+}
+
 .lk-header {
 	padding: 15px 0 20px;
 	.menu {
@@ -106,4 +173,3 @@
 		right: 11px;
 	}
 }
-
