--- a/src/sass/main-lk.scss
+++ b/src/sass/main-lk.scss
@@ -4,15 +4,13 @@
 @import "dev/_base.scss";
 
 //blocks styles
-@import "blocks/_header.scss";
+@import "blocks/_header-lk.scss";
 @import "blocks/_footer.scss";
 @import "blocks/_buttons.scss";
-@import "blocks/_social.scss";
 @import "blocks/_form.scss";
+@import "blocks/_file-field.scss";
 @import "blocks/_select.scss";
-@import "blocks/_checkbox.scss";
-@import "blocks/_filter.scss";
-@import "blocks/_pagination.scss";
-@import "blocks/_modal.scss";
+@import "blocks/_sidebar.scss";
+@import "blocks/_table.scss";
 @import "blocks/_tabs.scss";
-@import "blocks/_page.scss";
+@import "blocks/_page-lk.scss";
