--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -4,7 +4,6 @@
     height: 37px;
     padding: 9px 23px;
     color: #fff;
-    background-color: $blue;
     border-radius: 5px;
 	text-align: center;
     cursor: pointer;
@@ -12,16 +11,18 @@
     font-size: 14px;
     line-height: 19px;
     border: none;
-    &:hover,
-    &:active,
-    &:focus {
-    	background-color: $dark-blue;
-    }
     &.btn--light-blue {
         background-color: $blue;
         &:hover,
         &:active {
             background-color: $dark-blue;
+        }
+    }
+    &.btn--dark-blue {
+        background-color: $dark-blue;
+        &:hover,
+        &:active {
+            background-color: $blue;
         }
     }
     &.btn--small {
