--- a/src/sass/blocks/_page.scss
+++ b/src/sass/blocks/_page.scss
@@ -1,3 +1,17 @@
+// Главная
+.for-him {
+    padding-bottom: 30px;
+}
+.courses {
+    padding-top: 50px;
+    text-align: center;
+    .card {
+        margin-bottom: 60px;
+    }
+}
+.partners {
+    padding-top: 70px;
+}
 // Вакансия
 .vacancy-company {
     font-weight: 500;
