--- a/src/sass/main-lk.scss
+++ b/src/sass/main-lk.scss
@@ -2,6 +2,7 @@
 @import "dev/_normalize.scss";
 @import "dev/_variables.scss";
 @import "dev/_base.scss";
+@import "dev/_grid.scss";
 
 //blocks styles
 @import "blocks/_header-lk.scss";
