--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,11 +2,13 @@
 @import "dev/_normalize.scss";
 @import "dev/_variables.scss";
 @import "dev/_base.scss";
+@import "dev/_grid.scss";
 
 //blocks styles
 @import "blocks/_header.scss";
 @import "blocks/_footer.scss";
 @import "blocks/_buttons.scss";
+@import "blocks/_divider.scss";
 @import "blocks/_social.scss";
 @import "blocks/_form.scss";
 @import "blocks/_select.scss";
@@ -15,4 +17,8 @@
 @import "blocks/_pagination.scss";
 @import "blocks/_modal.scss";
 @import "blocks/_tabs.scss";
+@import "blocks/_slider.scss";
+@import "blocks/_promo.scss";
+@import "blocks/_card.scss";
+@import "blocks/_list.scss";
 @import "blocks/_page.scss";
