--- a/src/sass/blocks/_list.scss
+++ b/src/sass/blocks/_list.scss
@@ -6,3 +6,13 @@
 		max-width: 110px;
 	}
 }
+
+
+@media screen and (max-width: 767px) {
+	.logo-list {
+		margin-top: 25px;
+	}
+	.logo-item {
+		width: 50%;
+	}
+}
