--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,6 +6,7 @@
 
 //blocks styles
 @import "blocks/_header.scss";
+@import "blocks/_menu.scss";
 @import "blocks/_footer.scss";
 @import "blocks/_buttons.scss";
 @import "blocks/_divider.scss";
@@ -21,4 +22,5 @@
 @import "blocks/_promo.scss";
 @import "blocks/_card.scss";
 @import "blocks/_list.scss";
+@import "blocks/_action.scss";
 @import "blocks/_page.scss";
