--- a/src/sass/blocks/_card.scss
+++ b/src/sass/blocks/_card.scss
@@ -2,8 +2,8 @@
   background: #FFFFFF;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 7px;
-  margin-top: 25px;
-  margin-bottom: 25px;
+  width: 100%;
+  margin-bottom: 10px;
   text-align: left;
 }
 .card-photo {
@@ -81,4 +81,30 @@
   font-weight: normal;
   font-size: 12px;
   line-height: normal;
+}
+.card-favorite-link {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 0;
+  width: 36.98px;
+  height: 36.98px;
+  background: url(../img/star.svg) 0 0 no-repeat;
+  border: none;
+  outline: none;
+  &.card-favorite-link--active {
+      background: url(../img/star-blue.svg) 0 0 no-repeat;
+      background-size: 36.98px 36.98px;
+  }
+}
+.card-favorite-link--small {
+  width: 19.27px;
+  height: 19.27px;
+  background-size: 19.27px 19.27px;
+  &.card-favorite-link--active {
+      background-size: 19.27px 19.27px;
+  }
+}
+.card-favorite {
+  width: 30px;
+  text-align: right;
 }
