--- a/src/sass/blocks/_divider.scss
+++ b/src/sass/blocks/_divider.scss
@@ -22,6 +22,83 @@
     }
 }
 
+.divider-3 {
+    position: relative;
+    width: 110%;
+    height: 120px;
+    margin-top: -120px;
+    margin-left: -6%;
+    &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: url(../img/mask.svg) center no-repeat;
+        background-size: cover;
+    }
+}
+
+.divider-4 {
+    position: relative;
+    width: 110%;
+    height: 120px;
+    margin-top: -65px;
+    margin-left: -5%;
+    border-radius: 50% 16% 0 0;
+    transform: rotate(3deg);
+    & + div,
+    & + section,
+    & + .section {
+        margin-top: -58px;
+        padding-top: 70px;
+    }
+}
+
 .divider--white {
     background-color: #fff;
+}
+
+.divider-light-gray {
+    background-color: #F3F3F3;
+}
+
+
+@media screen and (max-width: 767px) {
+    .divider-1 {
+        height: 25px;
+        margin-top: -15px;
+    }
+    .divider-2 {
+        height: 55px;
+        margin-top: -10px;
+        border-radius: 0 0 0% 70%;
+        & + div,
+        & + section {
+            margin-top: -35px;
+            padding-top: 65px;
+        }
+    }
+    .divider-3 {
+        height: 100px;
+        margin-top: -80px;
+        & + div,
+        & + section,
+        & + .section {
+            margin-top: -50px;
+            padding-top: 40px;
+        }
+    }
+    .divider-4 {
+        height: 55px;
+        transform: rotate(5deg);
+        border-radius: 15% 12% 0 0;
+        & + div,
+        & + section,
+        & + .section {
+            margin-top: -30px;
+            padding-top: 45px;
+        }
+    }
 }
