--- a/src/sass/main-lk.scss
+++ b/src/sass/main-lk.scss
@@ -6,6 +6,7 @@
 
 //blocks styles
 @import "blocks/_header-lk.scss";
+@import "blocks/_menu.scss";
 @import "blocks/_footer.scss";
 @import "blocks/_buttons.scss";
 @import "blocks/_form.scss";
