--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,6 +1,6 @@
 .promo {
     background-size: cover;
-    background-position: 0 0;
+    background-position: center;
     min-height: 575px;
     position: relative;
     &:after {
@@ -50,5 +50,12 @@
         font-weight: 500;
         font-size: 30px;
         margin-bottom: 30px;
+    }
+}
+
+@media (min-width: 1500px) {
+    .promo,
+    .promo-box {
+        min-height: 800px;
     }
 }
