--- a/src/sass/dev/_base.scss
+++ b/src/sass/dev/_base.scss
@@ -81,6 +81,7 @@ input[type="search"] {
   font-weight: 700;
   font-size: 24px;
   color: $title-color;
+  line-height: normal;
 }
 .title-blue,
 .section-title--blue {
