--- a/src/sass/dev/_grid.scss
+++ b/src/sass/dev/_grid.scss
@@ -79,6 +79,9 @@
   .column-sm-full {
     width: 100%;
   }
+  .container-full {
+    padding: 0 15px;
+  }
 }
 
 @media screen and (max-width: 1199px) {
