--- a/src/sass/blocks/_file-field.scss
+++ b/src/sass/blocks/_file-field.scss
@@ -47,3 +47,10 @@
 		content: "Выбранный файл: ";
 	}
 }
+
+
+@media screen and (max-width: 767px) {
+	.file-field-container {
+	    width: 130px;
+	}
+}
