--- a/src/sass/blocks/_sidebar.scss
+++ b/src/sass/blocks/_sidebar.scss
@@ -63,3 +63,12 @@
     position: fixed;
     width: 210px;
 }
+
+@media screen and (max-width: 767px) {
+    .sidebar {
+        display: none;
+    }
+    .sidebar-content {
+        display: none;
+    }
+}
