--- a/src/sass/blocks/_table.scss
+++ b/src/sass/blocks/_table.scss
@@ -1,22 +1,5 @@
 .lk-table {
     width: 100%;
-    th {
-        border-bottom: 0.75px solid #ABABAB;
-        text-align: left;
-        font-weight: 400;
-        font-size: 10px;
-        line-height: normal;
-        color: #ABABAB;
-        padding-bottom: 7px;
-    }
-    td {
-        border-bottom: 0.75px solid rgba(171, 171, 171, 0.4);
-        font-weight: 500;
-        font-size: 14px;
-        line-height: normal;
-        color: $title-color;
-        padding: 15px 0;
-    }
     a {
         color: inherit;
     }
@@ -30,6 +13,52 @@
         color: #DA1F13;
     }
 }
+.lk-table-row {
+    display: flex;
+    justify-content: space-between;
+}
+.lk-table-row-th {
+    border-bottom: 0.75px solid #ABABAB;
+}
+.lk-table-row-td {
+    border-bottom: 0.75px solid rgba(171, 171, 171, 0.4);
+}
+.lk-table-th {
+    text-align: left;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: normal;
+    color: #ABABAB;
+    padding-bottom: 7px;
+}
+.lk-table-td {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: normal;
+    color: $title-color;
+    padding: 15px 0;
+}
+.lk-table-name {
+    width: 40%;
+}
+.lk-table-cash {
+    width: 20%;
+}
+.lk-table-update {
+    width: 15%;
+}
+.lk-table-status {
+    width: 20%;
+}
+.lk-table-remove {
+    width: 5%;
+}
+.remove-btn {
+    background: none;
+    border: none;
+    padding: 0;
+    vertical-align: top;
+}
 .remove-ikon {
     display: block;
     width: 15px;
@@ -38,4 +67,52 @@
     font-size: 0;
     cursor: pointer;
     background: url(../img/remove.svg) 0 0 no-repeat;
+}
+
+@media screen and (max-width: 767px) {
+    .lk-table-th {
+        display: none;
+    }
+    .lk-table-td {
+        padding: 10px 0;
+    }
+    .lk-table-row {
+        flex-wrap: wrap;
+    }
+    .lk-table-name {
+        width: 100%;
+    }
+    .lk-table-cash,
+    .lk-table-update,
+    .lk-table-status,
+    .lk-table-remove {
+        width: 50%;
+    }
+    .lk-table-update,
+    .lk-table-remove {
+        text-align: right;
+    }
+    .remove-btn {
+        background: #D84747;
+        border-radius: 5px;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 19px;
+        text-align: center;
+        color: #FFFFFF;
+        cursor: pointer;
+        padding: 5px 15px;
+    }
+    .remove-ikon {
+        width: 100%;
+        height: auto;
+        background: none;
+        font-size: 14px;
+    }
+}
+
+@media screen and (max-width: 1199px) {
+    .lk-table-name {
+        width: 20%;
+    }
 }
