--- a/src/sass/main-lk.scss
+++ b/src/sass/main-lk.scss
@@ -15,4 +15,5 @@
 @import "blocks/_sidebar.scss";
 @import "blocks/_table.scss";
 @import "blocks/_tabs.scss";
+@import "blocks/_card.scss";
 @import "blocks/_page-lk.scss";
