--- a/src/sass/blocks/_sidebar.scss
+++ b/src/sass/blocks/_sidebar.scss
@@ -1,6 +1,7 @@
 .sidebar {
     width: 210px;
     height: 100%;
+    height: auto;
     padding: 13px 0;
     background: linear-gradient(169.12deg, #2A6687 19.35%, #27A38C 104.27%);
 }
