--- a/src/sass/blocks/_page-lk.scss
+++ b/src/sass/blocks/_page-lk.scss
@@ -2,6 +2,7 @@
     flex: 1 0 calc(100% - 210px);
     padding: 20px 30px;
     height: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
 }
