--- a/src/sass/blocks/_tabs.scss
+++ b/src/sass/blocks/_tabs.scss
@@ -1,8 +1,3 @@
-.tabs {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
 .tabs-head {
     width: 100%;
     display: flex;
@@ -49,10 +44,26 @@
 }
 
 @media screen and (max-width: 767px) {
+    .tabs-content {
+        padding-top: 20px;
+        padding-bottom: 20px;
+        height: auto;
+        .title {
+            margin-top: 0;
+        }
+    }
     .tabs-caption-item {
         margin: 0 8px 10px;
     }
     .tabs-head {
         margin-bottom: 5px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .tabs {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
     }
 }
