--- a/src/sass/main-lk.scss
+++ b/src/sass/main-lk.scss
@@ -5,8 +5,9 @@
 @import "dev/_grid.scss";
 
 //blocks styles
-@import "blocks/_header-lk.scss";
+@import "blocks/_header.scss";
 @import "blocks/_menu.scss";
+@import "blocks/_dropdown.scss";
 @import "blocks/_footer.scss";
 @import "blocks/_buttons.scss";
 @import "blocks/_form.scss";
