--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,7 @@
 //blocks styles
 @import "blocks/_header.scss";
 @import "blocks/_menu.scss";
+@import "blocks/_dropdown.scss";
 @import "blocks/_footer.scss";
 @import "blocks/_buttons.scss";
 @import "blocks/_divider.scss";
