--- a/src/sass/blocks/_form.scss
+++ b/src/sass/blocks/_form.scss
@@ -90,3 +90,69 @@ input[type="submit"] {
 .field-group {
 	margin-bottom: 15px;
 }
+
+// Search
+.search {
+	width: 365px;
+}
+.search-form {
+	position: relative;
+}
+.search-field {
+	width: 100%;
+	height: 40px;
+	background: #E8E8E8;
+	border-radius: 5px;
+	border: none;
+	padding: 5px 35px 5px 13px;
+	font-size: 14px;
+	color: #515151;
+	box-sizing: border-box;
+	outline: none;
+}
+.search-btn,
+.search-toggle {
+	width: 32px;
+	height: 40px;
+	font-size: 0;
+	background: url(../img/search-icon.svg) center no-repeat;
+	border: none;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	right: 5px;
+	outline: none;
+}
+.search-toggle {
+	display: none;
+}
+
+@media screen and (max-width: 767px) {
+	.search {
+		position: relative;
+		width: calc(100% - 133px);
+    	margin-right: 15px;
+	}
+	.search-form {
+		display: none;
+	}
+	.search-field {
+		margin: 0 0 0 5px;
+		height: 35px;
+		padding: 5px 35px 5px 7px;
+	}
+	.search-btn {
+		height: 35px;
+	}
+	.search-toggle {
+		display: block;
+	}
+}
+
+@media screen and (max-width: 1199px) {
+	.search {
+	    width: 300px;
+	}
+}
+// end Search
