--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -3,6 +3,18 @@ header {
 	box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.1);
 	padding: 15px 0;
 	position: relative;
+	height: 80px;
+	&.fixed {
+		position: fixed;
+		top: 0;
+		width: 100%;
+		z-index: 9;
+		& + div,
+		& + section,
+		& + main {
+			margin-top: 80px;
+		}
+	}
 }
 .header-box {
 	align-items: center;
@@ -18,41 +30,6 @@ header {
 	span {
 		font-weight: 900;
 	}
-}
-.search {
-	width: 365px;
-}
-.search-form {
-	position: relative;
-}
-.search-field {
-	width: 100%;
-	height: 40px;
-	background: #E8E8E8;
-	border-radius: 5px;
-	border: none;
-	padding: 5px 35px 5px 13px;
-	font-size: 14px;
-	color: #515151;
-	box-sizing: border-box;
-	outline: none;
-}
-.search-btn,
-.search-toggle {
-	width: 32px;
-	height: 40px;
-	font-size: 0;
-	background: url(../img/search-icon.svg) center no-repeat;
-	border: none;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	margin: auto;
-	right: 5px;
-	outline: none;
-}
-.search-toggle {
-	display: none;
 }
 .header-links {
 	width: 20%;
@@ -84,33 +61,74 @@ header {
 	}
 }
 
-@media screen and (max-width: 767px) {
-	header {
-	    padding: 8px 0;
+.lk-header {
+	padding: 15px 0 20px;
+	.menu {
+		width: 60%;
 	}
-	.search {
+	&.fixed {
+		& + .lk-wrapper {
+			margin-top: 80px;
+		}
+	}
+}
+.header-meta {
+	align-items: center;
+	padding-left: 20px;
+	.dropdown-menu {
+		padding: 0 15px;
 		position: relative;
-		width: calc(100% - 133px);
-    	margin-right: 15px;
-	}
-	.search-form {
-		display: none;
-	}
-	.search-field {
-		margin: 0 0 0 5px;
-		height: 35px;
-		padding: 5px 35px 5px 7px;
-	}
-	.search-btn {
-		height: 35px;
-	}
-	.search-toggle {
-		display: block;
 	}
 }
 
-@media screen and (max-width: 1199px) {
-	.search {
-	    width: 300px;
+@media screen and (max-width: 767px) {
+	header {
+	    padding: 8px 0;
+	    height: auto;
+	    &.fixed {
+	    	& + div,
+	    	& + section,
+	    	& + main {
+	    		margin-top: 40px;
+	    	}
+	    }
+	}
+	.lk-header {
+	    padding: 8px 0;
+	    .mobile-menu-list {
+		    top: 63px;
+		}
+		&.fixed + .lk-wrapper {
+		    margin-top: 62px;
+		}
+		.search-field {
+		    position: absolute;
+		    width: 165px;
+		    top: 0;
+		    bottom: 0;
+		    margin: auto;
+		    right: 0;
+		    z-index: 5;
+		}
+		.search-btn {
+			z-index: 6;
+		}
+		.search {
+			position: relative;
+			width: calc(100% - 230px);
+			margin-right: 0;
+		}
+		.header-meta {
+			padding-left: 0;
+		}
 	}
 }
+
+@media screen and (min-width: 768px) {
+	.lk-header {
+		.mobile-menu {
+			display: none;
+		}
+	}
+}
+
