плашка cookies и отступ от фикс.хедера на мобилках

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,4 +24,5 @@
 @import "blocks/_card.scss";
 @import "blocks/_list.scss";
 @import "blocks/_action.scss";
+@import "blocks/_cookies.scss";
 @import "blocks/_page.scss";
