--- a/src/sass/main-lk.scss
+++ b/src/sass/main-lk.scss
@@ -17,4 +17,5 @@
 @import "blocks/_table.scss";
 @import "blocks/_tabs.scss";
 @import "blocks/_card.scss";
+@import "blocks/_cookies.scss";
 @import "blocks/_page-lk.scss";
