--- a/src/sass/blocks/_page-lk.scss
+++ b/src/sass/blocks/_page-lk.scss
@@ -46,6 +46,7 @@
         vertical-align: middle;
         img {
             width: 100%;
+            height: 100%;
             object-fit: cover;
             border-radius: 50%;
         }
