--- a/src/sass/blocks/_action.scss
+++ b/src/sass/blocks/_action.scss
@@ -39,6 +39,7 @@
     align-items: center;
     justify-content: center;
     height: 100%;
+    margin: 0;
 }
 .action-item {
     text-align: center;
@@ -47,6 +48,10 @@
     font-size: 16px;
     line-height: normal;
     margin: 5px 40px;
+    padding-left: 0;
+    &:before {
+        display: none;
+    }
     span {
         display: block;
         font-size: 36px;
