--- a/src/sass/blocks/_form.scss
+++ b/src/sass/blocks/_form.scss
@@ -33,12 +33,15 @@ label {
 	color: #ABABAB;
 	line-height: normal;
 	display: block;
+	margin-top: 7px;
 	& + input,
-	& + .custom-select-wrapper {
+	& + .custom-select-wrapper,
+	& + textarea {
 		margin-top: 3px;
 	}
 }
-input {
+input,
+textarea {
 	margin: 5px 0;
 	background: #E8E8E8;
 	border-radius: 5px;
@@ -51,18 +54,47 @@ input {
 	width: 100%;
 	box-sizing: border-box;
 }
-input[type="submit"] {
+input[type="submit"],
+input[type="button"],
+input[type="reset"] {
+	width: auto;
 	background-color: $dark-blue;
 	color: #fff;
 	text-align: center;
 	font-weight: 500;
 	font-size: 14px;
 	line-height: 19px;
-	padding: 10px;
+	padding: 10px 25px;
+	display: block;
 	&:hover,
 	&:active {
 		background-color: $blue;
 	}
+	&.btn-full {
+		width: 100%;
+	}
+}
+input[type="checkbox"],
+input[type="radio"] {
+    width: auto;
+    vertical-align: middle;
+    margin-right: 5px;
+}
+textarea {
+	resize: vertical;
+}
+button {
+	outline: none;
+}
+.error-field {
+	border: 1px solid #D84747;
+}
+.error-field-text {
+	color: #D84747;
+	display: block;
+	font-size: 9px;
+	line-height: normal;
+	font-weight: 400;
 }
 
 .form-link {
@@ -128,6 +160,110 @@ input[type="submit"] {
 	display: none;
 }
 
+.input-checkbox {
+    position: relative;
+    display: block;
+    padding-left: 20px;
+    font-size: 10px;
+	line-height: 14px;
+	color: $dark-gray;
+	font-weight: 400;
+    input[type="checkbox"] {
+	    visibility: hidden;
+	    position: absolute;
+	    left: 0;
+	    top: 0;
+	    margin: 0;
+	    padding: 0;
+	    outline: none;
+	    cursor: pointer;
+	    opacity: 0;
+	}
+	span.checkbox {
+	    margin-top: 0;
+	    margin-bottom: 0;
+	    position: relative;
+	    display: block;
+	}
+	input[type="checkbox"] + .checkbox:before {
+		content: '';
+	    position: absolute;
+	    left: -20px;
+	    top: 0;
+	    width: 12px;
+	    height: 12px;
+	    background-color: #f5f4f4;
+	    border: 1px solid $blue;
+	    z-index: 1;
+	    cursor: pointer;
+	    border-radius: 2px;
+	}
+	input[type="checkbox"]:checked + .checkbox:before {
+	    background-color: $blue;
+	}
+	input[type="checkbox"]:checked + .checkbox:after {
+	    content: '';
+	    position: absolute;
+		z-index: 2;
+		top: 1px;
+		left: -18px;
+		width: 10px;
+		height: 10px;
+	    background: url(../img/checkbox.svg) 0 0 no-repeat;
+	    cursor: pointer;
+	}
+}
+
+.file-field-container {
+	position: relative;
+	width: 200px;
+	display: inline-block;
+	vertical-align: middle;
+}
+.file-field-label {
+	display: block;
+	padding: 10px 20px;
+	background: $blue;
+	color: #fff;
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 19px;
+	text-align: center;
+	cursor: pointer;
+	border-radius: 5px;
+}
+.file-field {
+	position: absolute;
+    top: 0;
+    left: 0;
+    width: 200px;
+    padding: 0;
+    cursor: pointer;
+    opacity: 0;
+    height: 40px;
+    margin: 0;
+}
+.file-field:hover + .file-field-label,
+.file-field:focus + .file-field-label,
+.file-field-label:hover,
+.file-field-label:focus {
+	background: $dark-blue;
+}
+
+.file-return {
+	font-size: 14px;
+	font-weight: 300;
+	line-height: 19px;
+	color: $title-color;
+	display: inline-block;
+	vertical-align: middle;
+	margin: 0 10px;
+	width: auto;
+	&:not(:empty):before {
+		content: "Выбранный файл: ";
+	}
+}
+
 @media screen and (max-width: 767px) {
 	.search {
 		position: relative;
@@ -147,6 +283,9 @@ input[type="submit"] {
 	}
 	.search-toggle {
 		display: block;
+	}
+	.file-field-container {
+	    width: 130px;
 	}
 }
 
