--- a/src/sass/blocks/_menu.scss
+++ b/src/sass/blocks/_menu.scss
@@ -1,12 +1,49 @@
 .menu {
 	width: 36%;
 }
+.menu-list {
+	margin: 0;
+}
+.menu-list-child {
+	display: none;
+	position: absolute;
+	top: 23px;
+	left: 0;
+	width: 124px;
+	overflow: hidden;
+	background: #E8E8E8;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	padding: 5px 15px;
+	margin: 0;
+	z-index: 5;
+	.menu-link {
+		padding: 0;
+	}
+	.menu-item {
+		display: block;
+		margin: 5px 0;
+	}
+}
+.menu-list-sub {
+	margin: 0;
+	padding-left: 20px;
+	.menu-link {
+		font-weight: 300;
+	}
+}
 .menu-item {
 	display: inline-block;
 	vertical-align: top;
+	padding-left: 0;
+	&:before {
+		display: none;
+	}
+	&:hover .menu-list-child {
+		display: block;
+	}
 }
 .menu-link {
-	padding: 0 17px;
+	padding: 0 17px 5px;
 	font-weight: 500;
 	font-size: 14px;
 	color: $title-color;
@@ -85,8 +122,15 @@
 		padding: 15px 0;
 		background: $dark-blue;
 		background: linear-gradient(177.77deg, #2A6687 19.35%, #27A38C 104.27%);
+		margin: 0;
 		&.show {
 			display: block;
+		}
+	}
+	.mobile-menu-item {
+		padding-left: 0;
+		&:before {
+			display: none;
 		}
 	}
 	.mobile-menu-link {
