--- a/src/sass/dev/_base.scss
+++ b/src/sass/dev/_base.scss
@@ -26,6 +26,34 @@ body {
   z-index: 2;
   position: relative;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: normal;
+  color: $title-color;
+  margin: 20px 0;
+}
+h1 {
+  font-size: 24px;
+  font-weight: 700;
+}
+h2 {
+  font-size: 21px;
+  font-weight: 700;
+}
+h3,
+h4,
+h5,
+h6 {
+  font-size: 18px;
+  font-weight: 500;
+}
+p + p {
+  margin-top: 20px;
+}
 
 .section {
   padding: 20px 0 50px;
@@ -40,9 +68,67 @@ a {
 }
 
 ul {
-  padding-left: 0;
+  // margin: 0;
+  margin: 5px 0;
   list-style: none;
-  margin: 0;
+  padding-left: 0;
+  li {
+    position: relative;
+    padding-left: 15px;
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      margin: auto;
+      width: 5px;
+      height: 5px;
+      border-radius: 50%;
+      background-color: $title-color;
+    }
+  }
+}
+ol {
+  margin: 5px 0;
+  list-style: none;
+  padding-left: 0;
+  counter-reset: myCounter;
+  li {
+    padding-left: 20px;
+    position: relative;
+    &:before {
+      counter-increment: myCounter;
+      content:counter(myCounter) ". ";
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      margin: auto;
+      color: $title-color;
+      display: inline-block;
+    }
+  }
+}
+table {
+  margin: 20px 0;
+}
+th {
+  text-align: left;
+  color: $font-color;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: normal;
+  border-bottom: .75px solid $font-color;
+  padding: 7px 5px;
+}
+td {
+  padding: 15px 5px;
+  color: $title-color;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: normal;
+  border-bottom: .75px solid rgba(171, 171, 171, .4);
 }
 .box-head {
     border-bottom: 0.75px solid $font-color;
