--- a/src/sass/main-lk.scss
+++ b/src/sass/main-lk.scss
@@ -10,8 +10,9 @@
 @import "blocks/_dropdown.scss";
 @import "blocks/_footer.scss";
 @import "blocks/_buttons.scss";
+@import "blocks/_list.scss";
 @import "blocks/_form.scss";
-@import "blocks/_file-field.scss";
+@import "blocks/_modal.scss";
 @import "blocks/_select.scss";
 @import "blocks/_sidebar.scss";
 @import "blocks/_table.scss";
