--- a/src/sass/blocks/_dropdown.scss
+++ b/src/sass/blocks/_dropdown.scss
@@ -14,6 +14,9 @@
 		background: url(../img/message.svg) 0 3px no-repeat;
 		width: 26px;
 	}
+	&.dropdown-menu--wide .dropdown-menu-item--new:before {
+	    top: 30px;
+	}
 }
 .dropdown-menu--profile {
 	padding-right: 20px;
@@ -92,11 +95,65 @@
 	}
 }
 
+.dropdown-menu--wide {
+	.dropdown-menu-list {
+		width: 330px;
+		height: 275px;
+		overflow-y: auto;
+		left: -230px;
+		line-height: 18px;
+		color: $dark-gray;
+	}
+	.dropdown-menu-item {
+		border-bottom: 0.5px solid #C7C6C6;
+		padding: 15px 20px 15px 30px;
+		&:last-child {
+			border-bottom: none;
+		}
+		&--new:before {
+			display: block;
+			width: 8px;
+			height: 8px;
+			background-color: $red;
+			left: 10px;
+			margin: 1px;
+    		top: 20px;
+		}
+	}
+	.dropdown-menu-link {
+		padding: 0;
+	}
+}
+.dropdown-menu-body {
+	margin: 0;
+}
+.dropdown-menu-head {
+	border-bottom: 0.5px solid #C7C6C6;
+	padding: 15px 20px 15px 30px;
+	font-weight: 500;
+	p {
+		color: $title-color;
+	}
+	a {
+		font-size: 12px;
+		color: $blue;
+	}
+}
+
 @media screen and (max-width: 767px) {
 	.dropdown-menu--profile {
 		display: none;
 	}
 	.dropdown-menu-list {
 	    top: 54px;
+	}
+	.dropdown-menu--wide .dropdown-menu-list {
+	    width: 300px;
+	}
+	.dropdown-menu--wide.dropdown-menu--notification .dropdown-menu-list {
+	    left: -169px;
+	}
+	.dropdown-menu--wide.dropdown-menu--message .dropdown-menu-list {
+	    left: -221px;
 	}
 }
