--- a/src/sass/blocks/_menu.scss
+++ b/src/sass/blocks/_menu.scss
@@ -82,17 +82,38 @@
 .mobile-menu-email {
 	font-weight: 300;
 	font-size: 12px;
+	margin-top: 0;
 }
 .mobile-menu-user {
 	width: calc(100% - 50px);
 }
 .mobile-menu-profile-list {
-	padding-left: 20px;
-	font-weight: 400;
+	font-weight: 500;
 	margin-top: 10px;
+	margin-bottom: 0;
 }
 .mobile-menu-item--logout {
 	border-top: 0.75px solid #fff;
+}
+.mobile-menu-list-child {
+	font-weight: 300;
+	font-size: 14px;
+	line-height: normal;
+	color: #FFFFFF;
+	margin: 5px 0 0;
+	padding-left: 35px;
+	li {
+		margin-bottom: 15px;
+		&:last-child {
+			margin-bottom: 5px;
+		}
+	}
+	a {
+		padding: 0;
+	}
+}
+.mobile-menu-lk {
+	margin: 0;
 }
 
 @media screen and (max-width: 767px) {
