--- a/src/sass/blocks/_modal.scss
+++ b/src/sass/blocks/_modal.scss
@@ -113,10 +113,29 @@
   }
 }
 .white-popup-block {
-  width: 240px;
+  width: 262px;
   background: #F5F4F4;
   box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.15);
   border-radius: 5px;
   border: 0.5px solid #C7C6C6;
   margin: auto;
+}
+
+.modal-body {
+  padding: 15px;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 19px;
+  color: $dark-gray;
+  p {
+    text-align: left;
+    margin-bottom: 20px;
+  }
+}
+.modal-body--center {
+  text-align: center;
+}
+.title-modal {
+  margin-top: 0;
+  margin-bottom: 15px;
 }
