--- a/src/sass/dev/_variables.scss
+++ b/src/sass/dev/_variables.scss
@@ -4,6 +4,7 @@ $blue: 				#26A7C5;
 $dark-blue:       	#25709A;
 $light-gray: 		#E8E8E8;
 $dark-gray: 		#515151;
+$red: 				#DA1F13;
 
 
 $font-family:		'Ubuntu', sans-serif;
