--- a/src/sass/blocks/_table.scss
+++ b/src/sass/blocks/_table.scss
@@ -1,8 +1,5 @@
 .lk-table {
     width: 100%;
-    a {
-        color: inherit;
-    }
     .published {
         color: #64B967;
     }
@@ -39,16 +36,16 @@
     padding: 15px 0;
 }
 .lk-table-name {
-    width: 40%;
+    width: 50%;
 }
 .lk-table-cash {
     width: 20%;
 }
 .lk-table-update {
-    width: 15%;
+    width: 20%;
 }
 .lk-table-status {
-    width: 20%;
+    width: 10%;
 }
 .lk-table-remove {
     width: 5%;
@@ -68,7 +65,34 @@
     cursor: pointer;
     background: url(../img/remove.svg) 0 0 no-repeat;
 }
+.lk-table-list {
+    margin: 0;
+}
+.lk-table-item {
+    padding-left: 0;
+    margin-right: 10px;
+    margin-top: 7px;
+    display: inline-block;
+    vertical-align: top;
+    font-weight: 300;
+    font-size: 11px;
+    line-height: normal;
+    color: $title-color;
+    &:before {
+        display: none;
+    }
 
+}
+.lk-table-link {
+    color: inherit;
+    &:hover,
+    &:active {
+        color: $blue;
+    }
+}
+.lk-table-link--remove {
+    color: $red;
+}
 @media screen and (max-width: 767px) {
     .lk-table-th {
         display: none;
@@ -111,8 +135,26 @@
     }
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (max-width: 992px) {
     .lk-table-name {
+        width: 30%;
+    }
+    .lk-table-cash {
+        width: 25%;
+    }
+    .lk-table-status {
+        width: 25%;
+    }
+    .lk-table-update {
         width: 20%;
+    }
+}
+
+@media screen and (max-width: 1199px) {
+    .lk-table-status {
+        width: 20%;
+    }
+    .lk-table-update {
+        width: 15%;
     }
 }
