--- a/src/sass/blocks/_form.scss
+++ b/src/sass/blocks/_form.scss
@@ -1,3 +1,6 @@
+form {
+	position: relative;
+}
 .form-head {
 	background: #E8E8E8;
 	border-bottom: 0.5px solid #C7C6C6;
@@ -96,6 +99,9 @@ button {
 	line-height: normal;
 	font-weight: 400;
 }
+.send-ok {
+
+}
 
 .form-link {
 	font-weight: 500;
@@ -121,6 +127,26 @@ button {
 }
 .field-group {
 	margin-bottom: 15px;
+}
+.send-box {
+	position: absolute;
+    z-index: 100;
+    top: 103%;
+    width: 100%;
+    padding: 40px 15px 20px;
+    color: $title-color;
+	font-size: 14px;
+	line-height: 19px;
+	background-color: #F5F4F4;
+	border: 0.5px solid #C7C6C6;
+	box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.15);
+	border-radius: 5px;
+	background-repeat: no-repeat;
+	background-position: 50% 0;
+    background-size: 30px;
+}
+.send-box-ok {
+	background-image: url(../img/send-ok.svg);
 }
 
 // Search
