--- a/src/sass/main-lk.scss
+++ b/src/sass/main-lk.scss
@@ -18,5 +18,6 @@
 @import "blocks/_table.scss";
 @import "blocks/_tabs.scss";
 @import "blocks/_card.scss";
+@import "blocks/_cart.scss";
 @import "blocks/_cookies.scss";
 @import "blocks/_page-lk.scss";
