--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -21,7 +21,9 @@
 @import "blocks/_slider.scss";
 @import "blocks/_promo.scss";
 @import "blocks/_card.scss";
+@import "blocks/_cart.scss";
 @import "blocks/_list.scss";
+@import "blocks/_table.scss";
 @import "blocks/_action.scss";
 @import "blocks/_cookies.scss";
 @import "blocks/_page.scss";
