--- a/src/sass/blocks/_dropdown.scss
+++ b/src/sass/blocks/_dropdown.scss
@@ -156,4 +156,10 @@
 	.dropdown-menu--wide.dropdown-menu--message .dropdown-menu-list {
 	    left: -221px;
 	}
+	.dropdown-menu--new.dropdown-menu--notification:after {
+	    right: 8px;
+	}
+	.dropdown-menu--new.dropdown-menu--message:after {
+	    right: 4px;
+	}
 }
