--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -88,6 +88,10 @@ header {
 }
 
 @media screen and (max-width: 767px) {
+	.header-meta {
+	    padding-left: 0;
+	    padding-right: 15px;
+	}
 	header {
 	    padding: 8px 0;
 	    height: auto;
@@ -110,7 +114,7 @@ header {
 		}
 		.search-field {
 		    position: absolute;
-		    width: 165px;
+		    width: 145px;
 		    top: 0;
 		    bottom: 0;
 		    margin: auto;
@@ -122,11 +126,17 @@ header {
 		}
 		.search {
 			position: relative;
-			width: calc(100% - 230px);
+			width: calc(100% - 260px);
 			margin-right: 0;
 		}
 		.header-meta {
 			padding-left: 0;
+		}
+	}
+	.header-meta {
+		.dropdown-menu,
+		.cart-box {
+		    padding: 0 7px;
 		}
 	}
 }
